Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 Currently learning in Grade XI and passionate about IT, networking, and web development.</p>
                 <div class="home-buttons">
                     <button class="btn">
-                        <i class="fas fa-download"></i>
+                        <i class="fa-solid fa-house"></i>
                     </button>
                     <button class="btn">
                         <i class="fas fa-envelope"></i>
@@ -175,4 +175,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
